--- a/test-output/index.html
+++ b/test-output/index.html
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -100,6 +100,11 @@
                       <a href="#" panel-name="suite-Regression_Test_Suite" class="show-methods passed suite-Regression_Test_Suite"> (show)</a> <!-- show-methods passed suite-Regression_Test_Suite -->
                     </span>
                     <div class="method-list-content passed suite-Regression_Test_Suite">
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Regression_Test_Suite" title="payroll.testclasess.LoginTest" hash-for-method="logTotheSystem(jcmullage@gmail.com, 3131313~)">logTotheSystem(jcmullage@gmail.com, 3131313~)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-Regression_Test_Suite" title="payroll.testclasess.LoginTest" hash-for-method="logTotheSystem(jcmullage@gmail.com, 2wsx1qaz~)">logTotheSystem(jcmullage@gmail.com, 2wsx1qaz~)</a> <!-- method navigator-link -->
@@ -123,6 +128,14 @@
               <span class="class-name">payroll.testclasess.LoginTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="logTotheSystem(jcmullage@gmail.com, 3131313~)">
+                  </a> <!-- logTotheSystem(jcmullage@gmail.com, 3131313~) -->
+                  <span class="method-name">logTotheSystem</span>
+                  <span class="parameters">(jcmullage@gmail.com, 3131313~)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
                   <a name="logTotheSystem(jcmullage@gmail.com, 2wsx1qaz~)">
@@ -190,16 +203,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'logTotheSystem')
 data.setCell(0, 2, 'payroll.testclasess.LoginTest')
-data.setCell(0, 3, 11005);
+data.setCell(0, 3, 19894);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'logTotheSystem')
+data.setCell(1, 2, 'payroll.testclasess.LoginTest')
+data.setCell(1, 3, 8748);
 window.suiteTableData['Regression_Test_Suite']= { tableData: data, tableDiv: 'times-div-Regression_Test_Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 11 seconds</span>
+              <span class="suite-total-time">Total running time: 28 seconds</span>
               <div id="times-div-Regression_Test_Suite">
               </div> <!-- times-div-Regression_Test_Suite -->
             </div> <!-- times-div -->
@@ -232,11 +249,15 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">logTotheSystem(jcmullage@gmail.com, 2wsx1qaz~)</span>
-                <span class="method-start">9147 ms</span>
+                <span class="method-start">9201 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">logTotheSystem(jcmullage@gmail.com, 3131313~)</span>
+                <span class="method-start">18001 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">commonTearDown</span>
-                <span class="method-start">20184 ms</span>
+                <span class="method-start">37899 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
