--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,10 +9,11 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Regression Test Suite</th></tr>
-<tr><td><a href="#t0">Application Test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">21,742</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Application Test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">39,022</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Regression Test Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Application Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">payroll.testclasess.LoginTest</td><td><a href="#m0">logTotheSystem</a></td><td rowspan="1">1605945171946</td><td rowspan="1">11005</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Regression Test Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Application Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">payroll.testclasess.LoginTest</td><td><a href="#m0">logTotheSystem</a></td><td rowspan="2">1605946214625</td><td rowspan="2">19894</td></tr><tr class="passedeven"><td><a href="#m1">logTotheSystem</a></td></tr></tbody>
 </table>
-<h2>Application Test</h2><h3 id="m0">payroll.testclasess.LoginTest#logTotheSystem</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>jcmullage@gmail.com</td><td>2wsx1qaz~</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Application Test</h2><h3 id="m0">payroll.testclasess.LoginTest#logTotheSystem</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>jcmullage@gmail.com</td><td>3131313~</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">payroll.testclasess.LoginTest#logTotheSystem</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>jcmullage@gmail.com</td><td>2wsx1qaz~</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
